--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
@@ -18,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   }
 }
